--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,7 @@
 name: "fridaydistill"
-title: "My Friday Blog"
+title: "My Saturday Blog"
 description: |
-  My Friday Blog
+  My Friday Blog Created during a live demo
 output_dir: "_site"
 navbar:
   right:
@@ -10,3 +10,4 @@ navbar:
     - text: "About"
       href: about.html
 output: distill::distill_article
+citations: true
